# NotDec

./: .clang-format  .editorconfig  .gitignore  .gitmodules  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CNAME  Contributing.md  Dockerfile.dev  How-To-Profile.md  LICENSE  README.md  datalog.html  ghidra.html  index.html  llvm.html  papers.html  print.html  release-build.sh  retdec.html  retypd.html  run.sh  searchindex.js  searchindex.json
src/: CMakeLists.txt  NotDec.cpp  notdec.cpp  utils.cpp  utils.h
src/Passes/: AllocAnnotator.cpp  ConstraintGenerator.cpp  DSROA.cpp  FunctionRenamer.cpp  Global.cpp  GraphTypePass.cpp  MemOpMatcher.cpp  PassManager.cpp  PointerTypeRecovery.cpp  ReorderBasicblock.cpp  StackAlloca.cpp  StackBreaker.cpp  StackPointerFinder.cpp
src/Passes/notdec_retypd_provider/: __main__.py  type_inference.py  type_serialization.py  version.py
src/Passes/retdec-stack/: retdec-abi.cpp  retdec-ir-modifier.cpp  retdec-reaching-definition.cpp  retdec-stack-pointer-op-remove.cpp  retdec-stack.cpp  retdec-symbolic-tree.cpp  retdec-utils.cpp
src/Retypd/: Graph.cpp  Parser.cpp  RExp.cpp  Schema.cpp  Unify.cpp
src/TypeRecovery/: ConstraintGraph.cpp  DotSummaryParser.cpp  Lattice.cpp  LowTy.cpp  NFAMinimize.cpp  Parser.cpp  PointerNumberIdentification.cpp  RExp.cpp  SSGSolver.cpp  Schema.cpp  Sketch.cpp  SketchToCTypeBuilder.cpp  StorageShapeGraph.cpp
src/TypeRecovery/mlsub/: MLsubGenerator.cpp  MLsubGraph.cpp  PNDiff.cpp
src/TypeRecovery/retypd/: Schema.cpp
src/TypeRecovery/simplesub/: SimpleSubRecovery.cpp  simplesub.cpp
src/Utils/: Range.cpp  RangeUtils.cpp  StructManager.cpp  Utils.cpp  ValueNamer.cpp
src/backend/: CFG.cpp  CFG.h  CompoundConditionBuilder.cpp  CompoundConditionBuilder.h  Dominators.cpp  Dominators.h  PostOrderCFGView.cpp  PostOrderCFGView.h  exprs.cpp  exprs.h  goto.cpp  goto.h  phoenix.cpp  phoenix.h  region-graph.cpp  region-graph.h  statements.h  structural-analysis-ACDI.cpp  structural-analysis-ACDI.h  structural-analysis.cpp  structural-analysis.h  type-printer.cpp  utils.cpp  utils.h
src/backend/retdec-llvmir2hll/: CMakeLists.txt  config.cpp  config.h  llvmir2hll.cpp  llvmir2hll.h  parameters.cpp  parameters.h
src/backend/retdec-llvmir2hll/analysis/: break_in_if_analysis.cpp  break_in_if_analysis.h  def_use_analysis.cpp  def_use_analysis.h  expr_types_analysis.cpp  expr_types_analysis.h  goto_target_analysis.cpp  goto_target_analysis.h  indirect_func_ref_analysis.cpp  indirect_func_ref_analysis.h  no_init_var_def_analysis.cpp  no_init_var_def_analysis.h  null_pointer_analysis.cpp  null_pointer_analysis.h  special_fp_analysis.cpp  special_fp_analysis.h  use_def_analysis.cpp  use_def_analysis.h  used_types_visitor.cpp  used_types_visitor.h  used_vars_visitor.cpp  used_vars_visitor.h  value_analysis.cpp  value_analysis.h  var_uses_visitor.cpp  var_uses_visitor.h  written_into_globals_visitor.cpp  written_into_globals_visitor.h
src/backend/retdec-llvmir2hll/common/: address.cpp  address.h  architecture.cpp  basic_block.cpp  basic_block.h  calling_convention.cpp  class.cpp  file_format.cpp  file_type.cpp  function.cpp  function.h  language.cpp  object.cpp  object.h  pattern.cpp  pattern.h  storage.cpp  storage.h  tool_info.cpp  type.cpp  vtable.cpp  vtable.h
src/backend/retdec-llvmir2hll/config/: config.cpp  config.h
src/backend/retdec-llvmir2hll/evaluator/: arithm_expr_evaluator.cpp  arithm_expr_evaluator.h  arithm_expr_evaluator_factory.h
src/backend/retdec-llvmir2hll/hll/: bir_writer.cpp  bir_writer.h  bracket_manager.cpp  bracket_manager.h  compound_op_manager.cpp  compound_op_manager.h  hll_writer.cpp  hll_writer.h  hll_writer_factory.h  output_manager.cpp  output_manager.h
src/backend/retdec-llvmir2hll/ir/: add_op_expr.cpp  add_op_expr.h  address_op_expr.cpp  address_op_expr.h  and_op_expr.cpp  and_op_expr.h  array_index_op_expr.cpp  array_index_op_expr.h  array_type.cpp  array_type.h  assign_op_expr.cpp  assign_op_expr.h  assign_stmt.cpp  assign_stmt.h  binary_op_expr.cpp  binary_op_expr.h  bit_and_op_expr.cpp  bit_and_op_expr.h  bit_cast_expr.cpp  bit_cast_expr.h  bit_or_op_expr.cpp  bit_or_op_expr.h  bit_shl_op_expr.cpp  bit_shl_op_expr.h  bit_shr_op_expr.cpp  bit_shr_op_expr.h  bit_xor_op_expr.cpp  bit_xor_op_expr.h  break_stmt.cpp  break_stmt.h  call_expr.cpp  call_expr.h  call_stmt.cpp  call_stmt.h  cast_expr.cpp  cast_expr.h  comma_op_expr.cpp  comma_op_expr.h  const_array.cpp  const_array.h  (+116 more)
src/backend/retdec-llvmir2hll/llvm/: llvm_debug_info_obtainer.cpp  llvm_debug_info_obtainer.h  llvm_intrinsic_converter.cpp  llvm_intrinsic_converter.h  llvm_support.cpp  llvm_support.h  llvmir2bir_converter.cpp  (+3 more)
src/datalog/: .gitignore  CMakeLists.txt  README.md  fact-generator-main.cpp  fact-generator.cpp  fact-generator.h  gen_header.py
src/datalog/rules/: debug_rules.sh  external.dl  llvm.dl  pointer.dl  pointer_main.dl  stack.cpp
src/frontend/: context.h  wasm.cpp
src/frontend/optimizers/: FunctionRenamer.cpp  Global.cpp  opt-manager.cpp  opt-manager.h  stack.cpp
src/frontend/wasm/: parser-block.cpp  parser-block.h  parser-instruction.cpp  parser.cpp  parser.h
src/optimizers/: ConstraintGenerator.cpp  FunctionRenamer.cpp  MemOpMatcher.cpp  PassManager.cpp  PointerTypeRecovery.cpp  StackAlloca.cpp  StackPointerFinder.cpp  fact-generator.cpp  fact-generator.h  opt-manager.cpp  opt-manager.h  pointer-type-recovery.cpp  pointer-type-recovery.h  retypd-generate.cpp  retypd-generate.h  stack-alloca.cpp  stack-alloca.h  stack-pointer-finder.cpp  stack-pointer-finder.h  stack.cpp  stack.h
src/optimizers/datalog/: external.dl  pointer.dl
src/optimizers/notdec_retypd_provider/: README.md  __init__.py  __main__.py  type_inference.py  type_serialization.py
src/optimizers/retdec-stack/: retdec-abi.cpp  retdec-abi.h  retdec-ir-modifier.cpp  retdec-reaching-definition.cpp  retdec-reaching-definition.h  retdec-stack-pointer-op-remove.cpp  retdec-stack-pointer-op-remove.h  retdec-stack.cpp  retdec-stack.h  retdec-symbolic-tree-match.h  retdec-symbolic-tree.cpp  retdec-symbolic-tree.h  retdec-utils.h
(+748 files in other folders)
